syntax = "proto3";

package aspb;

import "shpb/anime_link.proto";
import "aspb/anime_serie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSerieLinkRequest {
  int64                 animeID    = 1;
  shpb.AnimeLinkRequest animeLinks = 2;
}

message CreateAnimeSerieLinkResponse {
  AnimeSerieResponse     animeSerie = 1;
  shpb.AnimeLinkResponse animeLinks = 2;
}